using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
	public static string Speed = "Speed";
	public static string XAxis = "XAxis";
	public static string YAxis = "YAxis";

	public static string Idle = "Idle";
	public static string Aiming = "Aiming";
	public static string Shoot = "Shoot";
	public static string Reload = "Reload";

	public static string Jump = "Jump";

	public static string Walk = "Walk";
	public static string AimRun = "AimRun";
	public static string Die = "Die";

	public static string Open = "open";
}
